# stac-fastapi-pgstac-benchmark

./: Dockerfile  Dockerfile.benchmark  README.md  docker-compose.yml  requirement.txt
.github/workflows/: ci.yml
benchmarks/: data.js
scripts/: format_benchmark.py
src/: README.md  pyproject.toml
src/stac/: __init__.py  app.py  config.py
