[project]
name = "stac"
description = "stac-fastapi"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]

dynamic = ["version"]
dependencies = [
    "stac-fastapi.api @ git+https://github.com/vincentsarago/stac-fastapi/@40bbcda24fb00ad05cdb925192f5fbf02701371b#egg=stac-fastapi.api&subdirectory=stac_fastapi/api",
    "stac-fastapi.extensions @ git+https://github.com/vincentsarago/stac-fastapi/@40bbcda24fb00ad05cdb925192f5fbf02701371b#egg=stac-fastapi.extensions&subdirectory=stac_fastapi/extensions",
    "stac-fastapi.pgstac @ git+https://github.com/vincentsarago/stac-fastapi/@40bbcda24fb00ad05cdb925192f5fbf02701371b#egg=stac-fastapi.pgstac&subdirectory=stac_fastapi/pgstac",
    "stac-fastapi.types @ git+https://github.com/vincentsarago/stac-fastapi/@40bbcda24fb00ad05cdb925192f5fbf02701371b#egg=stac-fastapi.types&subdirectory=stac_fastapi/types",
    "starlette-cramjam>=0.3,<0.4",
    "pypgstac==0.7.1",
    "psycopg",
    "psycopg_pool",
]

[build-system]
requires = ["flit>=3.2,<4"]
build-backend = "flit_core.buildapi"
